# mantid-package-example

./: .gitignore  CMakeLists.txt  README.md  developer-env.yml
bundle-scripts/: CMakeLists.txt  osx_install.sh  postinstall  windows_script
cmake/: FindPyQt5.cmake  FindSIP.cmake  InstallQt5Libs.cmake  MWindowCPack.cmake  MantidPrototypeCPack.cmake  PythonPackageTargetFunctions.cmake
construct/: CMakeLists.txt  README.md  construct.yaml
install/icons/: icon.icns
packaging/: MantidPrototype.plist  mwindow.plist
src/: CMakeLists.txt  main.cpp  setup.py
src/executable/: CMakeLists.txt  README.md  main.cpp  resources.qrc
src/lib/: CMakeLists.txt
src/lib/inc/MWindow/: math_functions.h
src/lib/inc/MantidPrototype/: math_functions.h
src/lib/src/: math_functions.cpp
src/m_window/: import_qt.py  main.py
src/m_windowCPP/: README.md
src/python_lib/: CMakeLists.txt
src/qt_executable/: CMakeLists.txt
src/sip/: CMakeLists.txt  _message_box.sip  message_box.h  sip-sanitize-module.py
